--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test_exam_db?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Java.Dev.2020
+spring.datasource.password=PASSWORD
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.format_sql=TRUE
